k8s/mysqldb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: mysqldb
  name: mysqldb
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: mysqldb
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.22.0 (955b78124)
      creationTimestamp: null
      labels:
        io.kompose.network/overlay: "true"
        io.kompose.service: mysqldb
    spec:
      containers:
        - env:
            - name: $MYSQL_DATABASE
              valueFrom:
                configMapKeyRef:
                  key: $MYSQL_DATABASE
                  name: env
            - name: $MYSQL_DOCKER_PORT
              valueFrom:
                configMapKeyRef:
                  key: $MYSQL_DOCKER_PORT
                  name: env
            - name: $MYSQL_LOCAL_PORT
              valueFrom:
                configMapKeyRef:
                  key: $MYSQL_LOCAL_PORT
                  name: env
            - name: MYSQL_DATABASE
              value: property
            - name: MYSQL_ROOT_PASSWORD
              value: password
          image: mysql
          name: mysqldb
          ports:
            - containerPort: 3306
          resources: {}
          volumeMounts:
            - mountPath: /etc/mysql
              name: db-config
            - mountPath: /var/lib/mysql
              name: db-data
            - mountPath: /data_backup/data
              name: mysqldb-claim2
            - mountPath: /docker-entrypoint-initdb.d
              name: mysqldb-claim3
      restartPolicy: Always
      volumes:
        - name: db-config
          persistentVolumeClaim:
            claimName: db-config
        - name: db-data
          persistentVolumeClaim:
            claimName: db-data
        - name: mysqldb-claim2
          persistentVolumeClaim:
            claimName: mysqldb-claim2
        - name: mysqldb-claim3
          persistentVolumeClaim:
            claimName: mysqldb-claim3
status: {}
