k8s/property-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: property
  name: property
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: property
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.22.0 (955b78124)
      creationTimestamp: null
      labels:
        io.kompose.network/overlay: "true"
        io.kompose.service: property
    spec:
      containers:
        - image: property
          name: property
          ports:
            - containerPort: 8888
          resources: {}
          stdin: true
          tty: true
          volumeMounts:
            - mountPath: /home/app/property/src/
              name: property-claim0
      restartPolicy: Always
      volumes:
        - name: property-claim0
          persistentVolumeClaim:
            claimName: property-claim0
status: {}
