k8s/user-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: user
  name: user
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: user
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.22.0 (955b78124)
      creationTimestamp: null
      labels:
        io.kompose.network/overlay: "true"
        io.kompose.service: user
    spec:
      containers:
        - image: user
          name: user
          ports:
            - containerPort: 8081
          resources: {}
          stdin: true
          tty: true
          volumeMounts:
            - mountPath: /home/app/user/src
              name: user-claim0
      restartPolicy: Always
      volumes:
        - name: user-claim0
          persistentVolumeClaim:
            claimName: user-claim0
status: {}
