k8s/overlay-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: overlay
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/overlay: "true"
  podSelector:
    matchLabels:
      io.kompose.network/overlay: "true"
